fixed the .form-row button selector to be display flex so the text doesn't overflow when scaling.

--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,8 @@ body{
     width: 60%;
     color: #FFFFFF;
     background-color: #596d48;
-  
+    display:flex;
+    justify-content: center;
     border: none;
     border-radius: 8px;
   
